--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *,
 ::before,
@@ -17,7 +17,12 @@
 }
 
 body,
-html {
+html,
+#root {
   height: 100%;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+main {
+  height: calc(100% - 64px - 32px); /* max height - header - footer */
 }
