--- a/src/components/layouts/Header.css
+++ b/src/components/layouts/Header.css
@@ -11,3 +11,15 @@ header {
   font-weight: 700;
   font-size: 1.5rem;
 }
+
+.header__title__accent {
+  background-image: linear-gradient(
+    245deg,
+    hsl(240deg 100% 64%) 0%,
+    hsl(340deg 100% 57%) 64%,
+    hsl(55deg 100% 50%) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
